=========================================================================
CHANGE LOG
=========================================================================

2011-10-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>
	
	* Added support for some non-standard nucleic acids (PSU)

2011-09-29 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed distance invalidation problem

2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added Display > Roving Detail

	* Removed AttributeError on coloring volumes; needs better
	solution though

	* Added polar contacts/hydrogen bonds to the Measurement wizard

2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Doc fix

2011-09-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* PyMOL now respects the h_bond_from_proton setting

2011-09-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added A > Generate > Selection > polar, non_polar,
	acceptor/donator options

2011-08-21 Jason Vertrees <Jason.Vertrees@schrodinger.com>

        * Fixed click-flash that happens when middle-clicking when
          showing the background gradient (thanks, Blaine)

        * Added A > Compute > Molecular Weight and cleaned up the
          compute menu in general

2011-08-15 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed a conversion bug in util.cbc; thanks Hongbo.

2011-07-26 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* one more fread

2011-07-26 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixing bugs introduced by last commit for freads; and fixed another importing bug

2011-07-25 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixing more warnings; opengl bindings work again; thanks to Jack
	Haworth for the patch

2011-07-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed lots of warnings on build; cleaning up code

2011-07-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>
